--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>
                 The skills you learn in our AWS and DevOps Learning Path will enhance your qualifications and
                     open greater opportunities to significantly leverage your income as a much sought-after professional
-                    in the high-demand IT job market. The AWS and DevOps Learning Path has two main modules: increase
+                    in the high demand IT job market. The AWS and DevOps Learning Path has two main modules: increase
                     your ability to deliver applications quickly by learning services on AWS and enhance your tech
                     skills by learning DevOps tools
             </p>
